[package]
name = "libertas-sprinkler"
version = "0.1.0"
edition = "2024"

[dependencies]
libertas-matter = { git="https://github.com/LibertasIoT/libertas-matter.git", default-features = false, features = ["alloc"] }
libertas = { git = "https://github.com/LibertasIoT/libertas-rs.git", package="libertas" }
libertas_macros = { git = "https://github.com/LibertasIoT/libertas-rs.git", package="libertas_macros" }
libertas-notification = { git = "https://github.com/LibertasIoT/libertas-rs.git", package="libertas-notification" }

[lib]
crate-type = ["rlib"]
